# python-project-template

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  copier.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  ci.yml.full  docs.yml
docs/: index.md  pillar-1-architecture.md  pillar-2-quality.md  pillar-3-ci-cd.md  pillar-4-governance.md  pillar-5-maintenance.md  quick-start.md
pillar-1-architecture/: index.html
pillar-2-quality/: index.html
pillar-3-ci-cd/: index.html
pillar-4-governance/: index.html
pillar-5-maintenance/: index.html
quick-start/: index.html
search/: search_index.json
template/: .copier-cleanup.py.jinja  .gitignore.jinja  .pre-commit-config.yaml  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  SECURITY.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  renovate.json
template/.github/: PULL_REQUEST_TEMPLATE.md
template/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml.jinja  feature_request.yml
template/.github/workflows/: docs.yml
template/src/{{ package_name }}/: __init__.py.jinja  main.py.jinja
template/tests/unit/: test_main.py.jinja
template/{% if include_docs %}docs{% endif %}/: index.md.jinja  quick-start.md.jinja
template/{% if include_github %}.github{% endif %}/: CODEOWNERS.jinja  release-drafter.yml
tests/: conftest.py  test_generation.py
(+4 files in other folders)
