[project]
name = "python-project-template"
version = "0.1.0"
description = "Professional Python project template using Copier."
requires-python = ">=3.12"
authors = [
    { name = "Javier Martín-Chávez" }
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-copie>=0.1",
    "ruff>=0.11",
    "pyright>=1.1.400",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.27",
]

[tool.uv]
package = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = []
